Fix JDK8 test compilation